--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,18 @@
 {
+  "name": "frontend",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "vite",
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "axios": "^1.13.4",
-    "lucide-react": "^0.563.0",
-    "react-hot-toast": "^2.6.0",
-    "react-router-dom": "^7.13.0"
+    "axios": "^1.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
+    "lucide-react": "^0.294.0",
+    "react-hot-toast": "^2.4.1"
   }
 }
