fix the next is not function error

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb+srv://hawig:hawig1234@cluster0.nnfwkhs.mongodb.net/astu_library?retryWrites=true&w=majority
-JWT_SECRET=astu_secret_key_2024
+# Updated URI to include the specific database name and better connection settings
+MONGO_URI=mongodb+srv://hawig:hawig1234@cluster0.nnfwkhs.mongodb.net/astu_library?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=astu_secret_key_2024_stronger_version
 NODE_ENV=development
